--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -6,7 +6,7 @@
         <title>UNRETURNED</title>
     </head>
 
-    <style>
+    <!-- <style>
         * {
             font-family: Arial, Helvetica, sans-serif; background-color: gray;
         }
@@ -80,7 +80,7 @@
         .active_tab{
             text-decoration: underline; color: pink;
         }
-    </style>
+    </style> -->
 
     <body>
         <h1 id="mema_title">Page ng UNRETURNED to boy. HAHA</h1>
