--- a/static/unreturned/unreturnedstyle.css
+++ b/static/unreturned/unreturnedstyle.css
@@ -86,7 +86,7 @@ table {
 hr {
     display:block;
     height:1px;
-    border:0;  
+    border:0;
     border-top:1px solid #cccccc;
     margin:1em 0;
     padding:0;
@@ -99,3 +99,78 @@ input, select {
 /*
 Start coding here
 */
+
+/* jonas design */
+* {
+    font-family: Arial, Helvetica, sans-serif; background-color: gray;
+}
+body {
+    margin: 15px;
+}
+
+#mema_title {
+    text-align: center;
+    padding: 15px;
+}
+
+#nav_btn {
+    width: 98%; display: flex; flex-direction: row; padding: 15px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+button {
+    width: 150px; height: 30px; margin: auto; border: none; background: none;
+}
+
+button a {
+    text-decoration: none; font-size: 22px; font-weight: 700; color: black;
+}
+
+#container {
+    width: 100%; float: right; margin-top: 20px; background-color: white; padding-top: 20px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#wrapper {
+    width: 90%; margin: auto; outline: solid 1px gray; margin-bottom: 25px; height: 200px; display: flex; flex-direction: column; background-color: white;
+}
+
+#top {
+    width: 100%; outline: solid 1px gray; display: flex; height: 80%;
+}
+
+#top #left {
+    outline: solid 1px gray; width: 20%;
+}
+
+#top #right {
+    width: 80%;
+}
+
+#top #right #item_name {
+    margin-left: 15px; font-size: 22px; font-weight: 500; padding: 15px 0px;
+}
+#top #right #item_details {
+    margin-left: 15px; font-size: 12px;
+}
+#top #right #item_quantity {
+    margin-right: 15px; font-size: 18px; font-weight: 500; text-align: right;
+}
+
+#bottom {
+    width: 100%; outline: solid 1px gray; height: 20%;
+}
+
+#bottom #btn_con {
+    width: 100%; height: 100%; text-align: right;
+}
+
+#bottom #btn_con button {
+    margin: auto 0px; width: 15%; margin-right: 15px; border: 0px; outline: solid 1px gray;
+}
+
+.rounded_corners {
+    border-radius: 8px;
+}
+
+.active_tab{
+    text-decoration: underline; color: pink;
+}
