--- a/templates/home/style.css
+++ b/templates/home/style.css
@@ -69,8 +69,8 @@ nav {
 .item-container{
   display: flex;
   justify-content: space-between;
+  
 }
-
 .navbar-brand {
   color: black;
   font-weight: bold;
@@ -144,7 +144,7 @@ nav {
   border: 3px solid gray; /* Add border style */
   border-radius: 10px; /* Add border-radius for rounded corners */
   padding: auto;
-}
+} 
 .form-item:hover {
   border-color: orange; /* Change the background color on hover */
 }
@@ -180,7 +180,6 @@ h1 {
   margin-right: 10px;
   color: orange; /* Adjust the color as needed */
 }
-
 .line {
       border-top: 2px solid gray; /* Line color */
       flex-grow: 1;
@@ -221,15 +220,17 @@ h1 {
   align-items: center;
 }
 
-.modal-content { /* form or yung box na white sa add*/
+.modal-content {
   background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
   width: 50%;
   height: 300px;
   margin: 0 auto;
   border-radius: 10px;
-    box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
-    text-align: center;
-    align-items: center;
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  align-items: center;
 }
 .modal-image .left { /*pic ng item na iaadd */
   float: left;
@@ -243,7 +244,30 @@ h1 {
   height: 100px; /* Adjust the height of the image as needed */
 
 }
+/* Add your other styles here */
+.left-preview {
+        width: 50%;
+        text-align: left;
+    }
 
+ .form-group {
+        margin-bottom: 15px;
+    }
+
+    .file-label {
+        vertical-align: top; /* Set vertical-align property to prevent the label from moving down */
+    }
+.photo-container {
+            text-align: left;
+        }
+
+        /* Additional styling for the image preview */
+        #photoPreview {
+            max-width: 100%;
+            max-height: 150px;
+            margin-top: 10px;
+            display: none;
+        }
 input{
   margin-bottom: 20px;
 }
@@ -259,31 +283,24 @@ input[type="file"] {
 }
 
 .btn{
-  margin-bottom: 1000px;
-  margin-top: 100px;
-  
-
+  margin-top: 80px;
 }
-.addItem{
-  background-color: #fff;
-  border-radius: 5px;
-  border: 2px solid orange;
-  font-size: 15px;
-}
-.addItem:hover{
-  background-color: rgba(255, 166, 0, 0.689);
-  color: white;
-
-}
+.addItem,
 .cancelItem{
   background-color: #fff;
-  border-radius: 5px;
-  border: 2px solid orange;
+  padding: 9px;
+  border-radius: 3px;
+  border: 3px solid gray;
   font-size: 15px;
+  margin-left: 15px;
+  text-align: center;
 }
+.addItem:hover,
 .cancelItem:hover{
   background-color: rgba(255, 166, 0, 0.689);
+  border: 3px solid rgba(255, 166, 0, 0.689);
   color: white;
+
 }
 
 label[for="name"]{
@@ -300,7 +317,6 @@ label[for="myFile"]{
   font-weight: bold;
   color: #0b0b0b;
 }
-
 .close-modal {
   position: absolute;
   top: 10px;
@@ -351,53 +367,52 @@ button.remove:hover {
 }
 
 .add-form {
-      background-color: #f8f9fa;
-      padding: 30px;
-      border: 3px solid black ;
-      border-radius: 15px;
-      width: auto; /* Fixed width */
-      height: auto; /* Fixed height to make it a square */
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+  background-color: #f8f9fa;
+  padding: 30px;
+  border: 3px solid black ;
+  border-radius: 15px;
+  width: auto; /* Fixed width */
+  height: auto; /* Fixed height to make it a square */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-    label {
-      display: block;
-      margin-bottom: 2px;
-    }
+label {
+  display: block;
+  margin-bottom: 2px;
+}
 
-    input {
-      width: 60%;
-      padding: 8px;
-      margin-bottom: 2px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
+input {
+  width: 60%;
+  padding: 8px;
+  margin-bottom: 2px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
-    button[type="submit"] {
-      margin-top: 10px;
-      background-color: whitesmoke;
-      color: orange;
-      padding: 10px 20px;
-      font-size: 15px;
-      cursor: pointer;
-      border: 2px solid orange;
-      border-radius: 5px;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
+button[type="submit"] {
+  margin-top: 10px;
+  background-color: whitesmoke;
+  color: orange;
+  padding: 10px 20px;
+  font-size: 15px;
+  cursor: pointer;
+  border: 2px solid orange;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
 
-    button[type="submit"]:hover {
-      background-color: lightgoldenrodyellow;
-    }
+button[type="submit"]:hover {
+  background-color: lightgoldenrodyellow;
+}
 
     /* Add these styles to your existing CSS file */
-
 .notification {
     display: none;
     background-color: #f44336;
@@ -416,17 +431,28 @@ button.remove:hover {
     margin-bottom: 10px;
 }
 
-#okayButton {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+/* Styling for the modal */
+#itemAddedModal {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  z-index: 9999;
 }
 
-#okayButton:hover {
-    background-color: #45a049;
+/* Styling for the Okay button */
+#okayButton {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 /*Recent*/
@@ -476,6 +502,24 @@ button.remove:hover {
   padding: 0;
   text-align: right;
 }
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding: 15px;
+    border-radius: 5px;
+}
 
 #okayButton {
     background-color: #4CAF50;
@@ -489,7 +533,14 @@ button.remove:hover {
 #okayButton:hover {
     background-color: #45a049;
 }
+ .select-container {
+    display: flex;
+    align-items: center;
+  }
 
+  #selectAllCheckbox {
+    margin-right: 10px; /* Add space between checkbox and label */
+  }
 /* Media queries for responsiveness */
 @media screen and (max-width: 768px) {
   header {
@@ -519,7 +570,13 @@ button.remove:hover {
     margin: 10px; /* Adjusted margin for better responsiveness on smaller screens */
   }
 
-  .container {
+  .container 
+  {
+    flex-direction: column; /* Stack items vertically on smaller screens */
+    align-items: flex-start;
+  }
+  .item-container
+  {
     flex-direction: column; /* Stack items vertically on smaller screens */
     align-items: flex-start;
   }
@@ -527,7 +584,7 @@ button.remove:hover {
   .navbar-brand {
     margin: 5px 10px; /* Adjusted margin for better spacing on smaller screens */
   }
-  .form,.form-item {
+  .form,.form-item, .item-form-item{
     margin: 10px; /* Adjusted margin for better responsiveness */
   }
   h1 {
