--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -98,24 +98,23 @@
 
             <!-- test block code -->
             <!-- template for the items -->
-            {% for item in unreturned_items %}
+            {% for items in recents_items %}
             <div id="wrapper">
-
                 <div id="top">
                     <div id="left">
-                        {% if item.item_photo %}
-                            <img src="{{ item.item_photo.url }}" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain">
+                        {% if items.item.item_photo %}
+                            <img src="{{ item.item.item_photo.url }}" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain">
                         {% endif %}
 
                     </div>
                     <div id="right">
-                        <p id="item_name">{{item.item_name}}</p>
+                        <p id="item_name">{{item.item.item_name}}</p>
                         <p id="item_details">
-                            Time Borrowed: {{item.item_date_borrowed}}<br />
-                            Time Returned: {{item.item_days_not_returned}}<br />
-                            Borrower: {{item.item_borrower}}
+                            Time Borrowed: {{items.borrowed_item.item_date_borrowed}}<br />
+                            Time Returned: {{items.borrowed_item.item_date_returned}}<br />
+                            Borrower: {{items.item_borrower}}
                         </p>
-                        <p id="item_quantity">Item Quantity: {{item.item_quantity}}</p>
+                        <p id="item_quantity">Item Quantity: {{items.borrowed_item.item_quantity}}</p>
 
                     </div>
                 </div>
@@ -128,6 +127,30 @@
             </div>
             {% endfor %}
             <!-- template for the items -->
+
+            <!-- static block -->
+            <!-- <div id="wrapper">
+                <div id="top">
+                    <div id="left">
+                            <img src="" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain">
+                    </div>
+                    <div id="right">
+                        <p id="item_name">Name nung item</p>
+                        <p id="item_details">
+                            Time Borrowed: <br />
+                            Time Returned: <br />
+                            Borrower:
+                        </p>
+                        <p id="item_quantity">Item Quantity: </p>
+                    </div>
+                </div>
+                <div id="bottom">
+                    <div id="btn_con">
+                        <button id="return_btn" class="rounded_corners">Return</button>
+                    </div>
+                </div>
+            </div> -->
+            <!-- static block -->
         </div>
 
     </body>
