--- a/templates/recents/recents.html
+++ b/templates/recents/recents.html
@@ -26,19 +26,19 @@
             <div id="wrapper">
                 <div id="top">
                     <div id="left">
-                        <!-- {% if items.item.item_photo %} -->
+                        {% if items.item.item_photo %}
                             <img src="" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain">
-                        <!-- {% endif %} -->
+                        {% endif %}
 
                     </div>
                     <div id="right">
-                        <p id="item_name">Name nung Item</p>
+                        <p id="item_name">Name nung item {{items.item.item_name}}</p>
                         <p id="item_details">
-                            Time Borrowed: <br />
-                            Time Returned: <br />
-                            Borrower:
+                            Time Borrowed: {{items.item_date_borrowed}}<br />
+                            Time Returned: {{items.item_date_returned}}<br />
+                            Borrower: {{items.item_borrower}}
                         </p>
-                        <p id="item_quantity">Item Quantity: </p>
+                        <p id="item_quantity">Item Quantity: {{items.item_quantity}}</p>
 
                     </div>
                 </div>
@@ -52,29 +52,6 @@
             {% endfor %}
             <!-- template for the items -->
 
-            <!-- static block -->
-            <!-- <div id="wrapper">
-                <div id="top">
-                    <div id="left">
-                            <img src="" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain">
-                    </div>
-                    <div id="right">
-                        <p id="item_name">Name nung item</p>
-                        <p id="item_details">
-                            Time Borrowed: <br />
-                            Time Returned: <br />
-                            Borrower:
-                        </p>
-                        <p id="item_quantity">Item Quantity: </p>
-                    </div>
-                </div>
-                <div id="bottom">
-                    <div id="btn_con">
-                        <button id="return_btn" class="rounded_corners">Return</button>
-                    </div>
-                </div>
-            </div> -->
-            <!-- static block -->
         </div>
 
     </body>
