--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -12,7 +12,7 @@
         <div id="nav_btn" class="rounded_corners">
             <button><a href="{% url 'home' %}">Home</a></button>
             <button><a href="{% url 'recents' %}">Recents</a></button>
-            <button><a href="{% url 'show_unreturned_items' %}" class="active_tab">Unreturned</a></button>
+            <button><a href="{% url 'unreturned' %}" class="active_tab">Unreturned</a></button>
             <button><a href="{% url 'notification' %}">Notification</a></button>
             <button><a href="{% url 'userprofile' %}">Account</a></button>
             <button><a href="{% url 'logout' %}">Logout</a></button>
@@ -53,29 +53,6 @@
             {% endfor %}
             <!-- template for the items -->
 
-            <!-- static block -->
-            <!-- <div id="wrapper">
-                <div id="top">
-                    <div id="left">
-                            <img src="" alt="" class="inventory_item" width="100%" height="100%" object-fit="contain">
-                    </div>
-                    <div id="right">
-                        <p id="item_name">Name nung item</p>
-                        <p id="item_details">
-                            Time Borrowed: <br />
-                            Time Returned: <br />
-                            Borrower:
-                        </p>
-                        <p id="item_quantity">Item Quantity: </p>
-                    </div>
-                </div>
-                <div id="bottom">
-                    <div id="btn_con">
-                        <button id="return_btn" class="rounded_corners">Return</button>
-                    </div>
-                </div>
-            </div> -->
-            <!-- static block -->
         </div>
 
     </body>
