--- a/templates/unreturned/unreturned.html
+++ b/templates/unreturned/unreturned.html
@@ -33,13 +33,13 @@
 
                     </div>
                     <div id="right">
-                        <p id="item_name">{{item.item.item_name}}</p>
+                        <p id="item_name">Name nung item</p>
                         <p id="item_details">
-                            Time Borrowed: {{item.item_date_borrowed}}<br />
-                            Time Returned: {{item.item_days_not_returned}}<br />
+                            Time Borrowed: <br />
+                            Time Returned: <br />
                             Borrower: {{item.item_borrower}}
                         </p>
-                        <p id="item_quantity">Item Quantity: {{item.item_quantity}}</p>
+                        <p id="item_quantity">Item Quantity: </p>
 
                     </div>
                 </div>
